<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_btn" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search_btn" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_coming_soon"
        android:title="@string/coming_soon_btn" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_downloads"
        android:title="@string/downloads_btn" />
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/more_btn" />
</menu>