<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar

        android:layout_width="match_parent"
        android:theme="@style/Theme.AppCompat.Light.Dialog"
        android:background="#F1F3F6"

        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        android:layout_height="55dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#59000000">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/ic_logo_netflix">

            </ImageView>


            <TextView
                android:id="@+id/txt_TvShows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="19dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/back_arrow"
                android:text="@string/toolbar_tvshows"
                android:textColor="#fff"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/txt_Movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="130dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/back_arrow"
                android:text="@string/toolbar_movies"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_MyList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="230dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/back_arrow"
                android:text="@string/home_my_list"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
</merge>